<resources>
    <string name="app_name">My Store</string>
    <string name="genre">ژانر</string>
    <string name="newest">جدید ترین ها</string>
    <string name="popular">پر بازدید ترین ها</string>
    <string name="rate">امتیاز</string>
    <string name="StoryName">نام داستان</string>
    <string name="Author">نویسنده</string>
    <string name="like">لایک</string>
    <string name="Saved">ذخیره شده ها</string>
    <string name="NextPage">&lt;-</string>
    <string name="BannerAd">ca-app-pub-8126152475553425/1993598247</string>

</resources>
