<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saved" />
    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newest"/>
    <Button
        android:id="@+id/btnPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular"/>
    <Button
        android:id="@+id/btnGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"/>
    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"/>

</LinearLayout>