<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoryActivity">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:gravity="left"
        android:text="@string/Author"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtStoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/StoryName"
        app:layout_constraintEnd_toStartOf="@+id/txtGenre"
        app:layout_constraintStart_toEndOf="@+id/txtAuthor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGenre"
        android:layout_width="42dp"
        android:layout_height="18dp"
        android:layout_gravity="right"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:gravity="right"
        android:text="@string/genre"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="5dp" />
</android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txtStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="داستان" />
    </ScrollView>

</RelativeLayout>

